--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -12,3 +12,27 @@
 .tabs-md .tab-button-icon {
 color : #ccc;
 }
+.temp {
+    font-size:90px;
+    text-align: center;
+    font-weight: normal;
+}
+
+.location {
+    text-align: center;
+}
+.icon , .desc {
+    text-align: center;
+}
+
+.icon img {
+    width:100px;
+}
+
+.location {
+    font-sze:40px
+}
+
+.desc {
+    font-size: 30px;
+}
